--- a/ClientDemonstration/.vscode/launch.json
+++ b/ClientDemonstration/.vscode/launch.json
@@ -14,7 +14,8 @@
             "cwd": "${workspaceFolder}",
             "console": "externalTerminal",
             "stopAtEntry": false,
-            "internalConsoleOptions": "openOnSessionStart"
+            "internalConsoleOptions": "openOnSessionStart",
+            "justMyCode":false
         },
         {
             "name": ".NET Core Attach",
